--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
       </div>
 
       <div class="header-controls--mobile">
-        <img src="./images//burger.svg" alt="burger" />
+        <img src="./images/search.svg" alt="search" />
       </div>
     </div>
   </div>
