--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -7,7 +7,7 @@
         placeholder="Что хотите посмотреть?"
       />
       <button id="search-button">
-        <img src="./images//search.svg" alt="search" />
+        <img src="./images/search.svg" alt="search" />
         <span>Найти</span>
       </button>
     </div>
